--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ a.info {
 
 .title {
   font-size: 65px;
-  font-family: "times","times now";
+  font-family: "times";
   margin-top: 40px;
   font-weight: lighter;
   letter-spacing: -2px;
