--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
+* {
+ cursor: none;
+}
+
+
+/* cursor*/
+
+.cursor {
+position: absolute;
+width: 30px;
+height: 30px;
+border-radius: 100%;
+transform: translate(-50%, -50%);
+
+background-color: rgba(0,0,0,1);
+/* mix-blend-mode: difference; */
+left: -100px;
+cursor: none;
+pointer-events: none;
+z-index: 500;
+
+transition: height width 1s ease-in-out;
+
+
+}
+
+
 .grid {
   display: grid;
   grid-template-columns: repeat(9, 10vw [col-start]);
-  grid-template-rows: repeat(20, 10vh [row-start]);
+  grid-template-rows: repeat(20, 8vh [row-start]);
   width: 100%;
 }
 
@@ -12,7 +39,7 @@
   width: 100%;
   background-color: white;
   height: 20px;
-  padding-top: 10px;
+  padding-top: 20px;
   margin-left: -20px;
   padding-left: 20px;
   padding-bottom: 10px;
@@ -26,6 +53,7 @@ body {
   margin: 0;
 
   font-size: 14px;
+  font-family: "SimSun-ExtB";
   overflow: scroll;
 }
 
@@ -37,7 +65,6 @@ a {
 
 .header-txt {
   font-weight: bold;
-  font-family: helvetica
 }
 
 .header {
@@ -45,7 +72,7 @@ position: fixed;
 }
 
 a:hover {
-  transform: translate(10px, 0px);
+  /* transform: translate(10px, 0px); */
 }
 
 a.name {
@@ -65,11 +92,11 @@ a.info {
 }
 
 .title {
-  font-size: 65px;
-  font-family: "times";
+  font-size: 58px;
+  font-family:"times";
   margin-top: 40px;
-  font-weight: lighter;
-  letter-spacing: -1px;
+  font-weight: ;
+  letter-spacing: -.5px;
 }
 
 
@@ -116,17 +143,33 @@ a.info {
 }
 
 .description {
-  font-size: 14px;
-  font-weight: bold;
-  font-family:helvetica;
+  font-family: "SimSun-ExtB";
   font-weight: regular;
   padding-top: 30px;
   line-height: 20px;
 }
 
 
-#gos-des {
+.info-description{
   grid-column: 1/ span 7;
+  grid-row: 2 / span 2;
+  line-height: 1.25;
+  font-size: 45px;
+  font-family: "times";
+}
+
+.info-links{
+  grid-column: 9/ span 2;
+  grid-row: 2 / span 6;
+  line-height: 1.75;
+}
+
+.info-links a{
+margin-bottom: 100px;
+}
+
+#gos-des {
+  grid-column: 1/ span 6;
   grid-row: 7 / span 2;
 }
 
@@ -153,7 +196,7 @@ a.info {
 
 .line {
   height: 2px;
-  width: 90vw;
+  width: 97vw;
   background-color: black;
 
 }
@@ -192,16 +235,13 @@ a.info {
 
 
 .category, .date, .course, .comingsoon {
-  font-size: 14px;
-  font-family: "helvetica";
-  font-weight: bold;
   /* margin-top: -35px; */
 
 
 }
 
 .category {
-  grid-column: 1/ span 4;
+  grid-column: 1/ span 3;
 
 }
 
@@ -254,7 +294,7 @@ visibility: visible;
 
 .index-img {
   visibility: hidden;
-  width: 40vw;
+  width: 45vw;
   height: auto;
   right: 20px;
   top: 20px;
@@ -274,12 +314,12 @@ visibility: visible;
 }
 
 .des-cat {
-  font-size: 14px;
   font-weight: bold;
 }
 
 .inner-des {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
+  margin-top: -30px;
 
 }
