--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
   margin: 0;
 
   font-size: 14px;
-  font-family: "SimSun-ExtB";
+  font-family: "SimSun-ExtB", courier;
   overflow: scroll;
 }
 
