--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 img {
   cursor: none;
+  z-index: -5;
 }
 
 
@@ -11,10 +12,11 @@ img {
 
 .cursor {
 position: absolute;
-width: 30px;
-height: 30px;
+width: 15px;
+height: 15px;
 border-radius: 100%;
 transform: translate(-50%, -50%);
+border: 1px solid white;
 
 background-color: rgba(0,0,0,1);
 /* mix-blend-mode: difference; */
