--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-* {
+Times New Roman New Roman* {
  cursor: none;
 }
 
-img {
-  cursor: none;
-  z-index: -5;
+
+html {
+  background: #fff;
 }
 
 
@@ -50,7 +50,7 @@ transition: height width color s1s ease-in-out;
   grid-template-columns: repeat(9, 10vw [col-start]);
   grid-template-rows: repeat(1, 10vh [row-start]);
   width: 100%;
-  background-color: white;
+  /* background-color: white; */
   height: 20px;
   padding-top: 20px;
   margin-left: -20px;
@@ -61,14 +61,21 @@ transition: height width color s1s ease-in-out;
 }
 
 
-
+a {
+  cursor: none;
+}
 body {
   padding-left: 20px;
   padding-right: 20px;
   margin: 0;
+  cursor: none;
+
+  background-color: white;
+  color: black;
 
   font-size: 14px;
-  font-family: "simsunb", "Courier New";
+  font-family: "Courier New";
+  letter-spacing: -.75px;
   overflow: scroll;
 }
 
@@ -83,6 +90,13 @@ a {
 
 .header {
 position: fixed;
+font-weight: lighter;
+
+}
+
+.header a {
+  /* font-family: "courier";
+  font-weight: lighter; */
 }
 
 a:hover {
@@ -105,9 +119,18 @@ a.info {
   grid-row: 1;
 }
 
+/* .color {
+  width: 100vw;
+  background-color: lime;
+  margin-left: -20px;
+  grid-column: 1;
+  grid-row: 1 / span 3;
+} */
+
+
 .title {
   font-size: 58px;
-  font-family:"times";
+  font-family:"Times New Roman";
   margin-top: 40px;
   font-weight: ;
   letter-spacing: -.5px;
@@ -157,7 +180,7 @@ a.info {
 }
 
 .description {
-  font-family: "simsunb", "Courier New";
+  font-family: "Courier New";
   font-weight: regular;
   padding-top: 30px;
   line-height: 20px;
@@ -169,13 +192,14 @@ a.info {
   grid-row: 2 / span 2;
   line-height: 1.25;
   font-size: 45px;
-  font-family: "times";
+  font-family: "Times New Roman";
 }
 
 .info-links{
   grid-column: 9/ span 2;
   grid-row: 2 / span 6;
   line-height: 1.75;
+  text-decoration: underline;
 }
 
 .info-links a{
@@ -333,6 +357,37 @@ visibility: visible;
 
 .inner-des {
   font-size: 14px;
-  margin-top: -30px;
+  line-height: 1.3;
+  font-weight: lighter;
+  max-width: 600px;
+  margin-top: 0px;
+  font-family: "courier new";
+  letter-spacing: -.75px;
 
+}
+
+.carousel-cell {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+
+  background-position: center;
+
+  prevNextButtons: false;
+
+}
+
+
+
+
+.main-carousel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  /* transform: translate(-50%, -50%); */
 }
