--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@ visibility: visible;
   font-size: 14px;
   line-height: 1.3;
   font-weight: lighter;
-  max-width: 600px;
+  /* max-width: 600px; */
   margin-top: 0px;
   font-family: "courier new";
   letter-spacing: -.75px;
@@ -390,4 +390,22 @@ visibility: visible;
   width: 100vw;
   height: 100vh;
   /* transform: translate(-50%, -50%); */
+}
+
+
+
+@media only screen and (max-width: 800px) {
+
+  .title {
+    font-size: 120px;
+  }
+
+  .inner-des {
+    max-width: 100%;
+  }
+
+  #gos-des {
+    grid-column: 1/ span auto;
+    grid-row: 6 / span 2;
+}
 }
