--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,25 @@ html {
   background: #fff;
 }
 
+.mobile {
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  color: black;
+  font-size: 20px;
+  /* text-align: center; */
+  padding: 50px;
+  z-index: 1000;
+  position: fixed;
+}
+
+.mobile p {
+  max-width: 60vw;
+  margin: auto;
+  transform: translate(-50%, -50%);
+}
+
 
 @font-face {
   font-family: "simsunb";
@@ -405,5 +424,17 @@ visibility: visible;
           #gos-des {
             grid-column: 1/ span 10;
             grid-row: 6 / span 2;
+        }
+
+        .cursor {
+          display: none;
+        }
+
+        .mobile {
+          display: inline-block;
+        }
+
+        .grid {
+          display: none;
         }
 }
